[package]
name = "async-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
mozjs = "0.14.5"
mozjs_sys = "0.140.5-7"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
